Made a header spacing change due to a display issue on iOS Safari on iPhone 6.

--- a/assets/style.css
+++ b/assets/style.css
@@ -432,7 +432,7 @@ so that the fields span the full width of left body panel */
         width: 100%;
         height: 60px;
         text-align: center;
-        word-spacing: 13px;
+        word-spacing: 8px;
     }
 
     .imgcontainer {
